--- a/index.html
+++ b/index.html
@@ -12,10 +12,15 @@
 </head>
 
 <body>
+
     <div class="container-xxl" style="width:95vw; height:90vh;">
 
         <div class="row w-100 h-100 m-0 align-items-center: justify-content-center">
 
+            <div class="stars">
+                <div class="star"></div>
+                <div class="star"></div>
+            </div>
             <!------------------------------------------------------------- personal-info ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
             <div class="col-lg-4 col-sm-12 d-flex flex-column justify-content-between">
                 <div class="row" id="personal-info">
@@ -64,10 +69,8 @@
                         in
                         automating devices,
                         Fast forward to today,<br> <br>I am an undergraduate student at <a href="https://ggu.ac.in/">
-                            <strong>
                                 Guru Ghasidas
                                 Vishwavidhalaya, India
-                            </strong>
                         </a>, pursuing
                         B.Tech in Information Technology. And I've had completed Harvard University <a
                             href="https://cs50.harvard.edu/x/2023">CS50x (2023)</a> and <a
@@ -101,7 +104,7 @@
 
 
                     <a href="https://drive.google.com/file/d/1xF_HwpVnoMMhBSrUWoAcXBbmv7M-Ln6R/view?usp=drive_link">
-                        <div class="card glassy my-4 rounded-3 p-2" style="max-width: 800px;">
+                        <div class="card glassy my-4 rounded-3 p-4" style="max-width: 800px;">
                             <div class="row">
                                 <div class="col-md-4 d-flex justify-content-start">
                                     <p class="timeline-date">SEP 2023 - CURRENT</p>
@@ -131,7 +134,7 @@
                     </a>
 
                     <a href="https://certificates.cs50.io/ec42d5ee-aa1b-476e-9de0-60e71cd4b58b.pdf?size=letter">
-                        <div class="card glassy my-4 rounded-3 p-2" style="max-width: 800px;">
+                        <div class="card glassy my-4 rounded-3 p-4" style="max-width: 800px;">
                             <div class="row">
                                 <div class="col-md-4 d-flex justify-content-start">
                                     <p class="timeline-date">MAY 2023 - NOV 2023</p>
@@ -162,7 +165,7 @@
                     </a>
 
                     <a href="https://drive.google.com/file/d/1_KeNDUMHfMNcglZMj0p4rMA0p1SNS5YL/view?usp=drive_link">
-                        <div class="card glassy my-4 rounded-3 p-2" style="max-width: 800px;">
+                        <div class="card glassy my-4 rounded-3 p-4" style="max-width: 800px;">
                             <div class="row">
                                 <div class="col-md-4 d-flex justify-content-start">
                                     <p class="timeline-date">JUL 2024 - CURRENT</p>
@@ -191,7 +194,7 @@
                     </a>
 
                     <a href="https://drive.google.com/file/d/1_KeNDUMHfMNcglZMj0p4rMA0p1SNS5YL/view?usp=drive_link">
-                        <div class="card glassy my-4 rounded-3 p-2" style="max-width: 800px;">
+                        <div class="card glassy my-4 rounded-3 p-4" style="max-width: 800px;">
                             <div class="row">
                                 <div class="col-md-4 d-flex justify-content-start">
                                     <p class="timeline-date">JAN 2024 - FEB 2024</p>
@@ -224,7 +227,7 @@
                 <!------------------------------------------------------------------------------Projects------------------------------------------------------------------------------------------------------------------------------- -->
                 <div class="col-12 my-5 py-5" id="Projects">
                     <a href="https://github.com/darkice000/blood-network/">
-                        <div class="card mb-3" style="max-width: 800px;">
+                        <div class="card mb-3 p-4" style="max-width: 800px;">
                             <div class="row g-0">
                                 <div class="col-md-4">
                                     <img src="assests/images/blood-network.png"
@@ -252,7 +255,7 @@
                     </a>
 
                         <a href="https://github.com/darkice000/glance-chrome-extension/">
-                            <div class="card mb-3" style="max-width: 800px;">
+                            <div class="card mb-3 p-4" style="max-width: 800px;">
                                 <div class="row g-0">
                                     <div class="col-md-4">
                                         <img src="assests/images/glance.png" class="img-fluid rounded-start img-thumbnail"
@@ -281,7 +284,7 @@
                         </a>
 
                         <a href="https://github.com/darkice000/automate_flow/">
-                            <div class="card mb-3" style="max-width: 800px;">
+                            <div class="card mb-3 p-4" style="max-width: 800px;">
                                 <div class="row g-0">
                                     <div class="col-md-4">
                                         <img src="assests/images/automate.png" class="img-fluid rounded-start img-thumbnail"
@@ -306,7 +309,7 @@
                         </a>
 
                         <a href="https://github.com/darkice000/ebay-replica/">
-                            <div class="card mb-3" style="max-width: 800px;">
+                            <div class="card mb-3 p-4" style="max-width: 800px;">
                                 <div class="row g-0">
                                     <div class="col-md-4">
                                         <img src="assests/images/ebay.png" class="img-fluid rounded-start img-thumbnail"
@@ -345,7 +348,6 @@
 
 
         </div>
-
     </div>
 
     <script src="assests/bootstrap/bootstrap.bundle.js"></script>
