--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 
 
                     <a href="https://drive.google.com/file/d/1xF_HwpVnoMMhBSrUWoAcXBbmv7M-Ln6R/view?usp=drive_link">
-                        <div class="card glassy my-4 rounded-3 py-4" style="max-width: 800px;">
+                        <div class="card glassy my-4 rounded-3 py-4 px-1 px-1" style="max-width: 800px;">
                             <div class="row">
                                 <div class="col-md-4 d-flex justify-content-start">
                                     <p class="timeline-date">SEP 2023 - CURRENT</p>
@@ -134,7 +134,7 @@
                     </a>
 
                     <a href="https://certificates.cs50.io/ec42d5ee-aa1b-476e-9de0-60e71cd4b58b.pdf?size=letter">
-                        <div class="card glassy my-4 rounded-3 py-4" style="max-width: 800px;">
+                        <div class="card glassy my-4 rounded-3 py-4 px-1 px-1" style="max-width: 800px;">
                             <div class="row">
                                 <div class="col-md-4 d-flex justify-content-start">
                                     <p class="timeline-date">MAY 2023 - NOV 2023</p>
@@ -165,7 +165,7 @@
                     </a>
 
                     <a href="https://drive.google.com/file/d/1_KeNDUMHfMNcglZMj0p4rMA0p1SNS5YL/view?usp=drive_link">
-                        <div class="card glassy my-4 rounded-3 py-4" style="max-width: 800px;">
+                        <div class="card glassy my-4 rounded-3 py-4 px-1" style="max-width: 800px;">
                             <div class="row">
                                 <div class="col-md-4 d-flex justify-content-start">
                                     <p class="timeline-date">JUL 2024 - CURRENT</p>
@@ -194,7 +194,7 @@
                     </a>
 
                     <a href="https://drive.google.com/file/d/1_KeNDUMHfMNcglZMj0p4rMA0p1SNS5YL/view?usp=drive_link">
-                        <div class="card glassy my-4 rounded-3 py-4" style="max-width: 800px;">
+                        <div class="card glassy my-4 rounded-3 py-4 px-1" style="max-width: 800px;">
                             <div class="row">
                                 <div class="col-md-4 d-flex justify-content-start">
                                     <p class="timeline-date">JAN 2024 - FEB 2024</p>
