--- a/index.html
+++ b/index.html
@@ -30,14 +30,12 @@
                             <h1>Aarav Kumar</h1>
                             <h5>Web Developer</h5>
                         </div>
-                        <p style="font-size: 1rem;">I love to automate and build things,<br> using, ofcourse, with my laptop.</p>
-                        <div class="light-text-emphasis my-5 d-none d-lg-block d-xl-block d-xxl-block">
-                            <ul>
-                                <li class="my-2"><a class="p-4 rounded " href="#About">——ABOUT</a></li>
-                                <li class="my-2"><a class="p-4 rounded " href="#Certifications">——CERTIFICATIONS</a>
-                                </li>
-                                <li class="my-2"><a class="p-4 rounded " href="#Projects">——PROJECT</a></li>
-                            </ul>
+                        <p style="font-size: 1rem;">I love to automate and build things,<br> using, ofcourse, with my
+                            laptop.</p>
+                        <div class="light-text-emphasis my-5 d-none d-lg-flex d-xl-flex d-xxl-flex flex-column" id="innerlink">
+                            <a class="p-2 rounded innerlink" href="#About">—— &nbsp;ABOUT</a>
+                            <a class="p-2 rounded innerlink" href="#Certifications">—— &nbsp;CERTIFICATIONS</a>
+                            <a class="p-2 rounded innerlink" href="#Projects">—— &nbsp;PROJECT</a>
                         </div>
 
                     </div>
@@ -45,15 +43,11 @@
                 <!------------------------------------------------------------- social handles ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
                 <div class="row" id="socials">
                     <div class="col-12 my-3">
-                        <a href="https://linkedin.com/in/kumaraarav/" target="_blank"><i
-                                class="fa-brands fa-linkedin"></i></a>
+                        <a href="https://linkedin.com/in/kumaraarav/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
                         <a href="https://github.com/darkice000/" target="_blank"><i class="fa-brands fa-github"></i></a>
-                        <a href="https://youtube.com/@kumaraarav-dev" target="_blank"><i
-                                class="fa-brands fa-youtube"></i></a>
-                        <a href="mailto:aarav7397@gmail.com" target="_blank"><i
-                                class="fa-solid fa-envelope"></i></a>
-                        <a href="https://leetcode.com/u/aarav7397/" target="_blank"><i
-                                class="fa-solid fa-code"></i></a>
+                        <a href="https://youtube.com/@kumaraarav-dev" target="_blank"><i class="fa-brands fa-youtube"></i></a>
+                        <a href="mailto:aarav7397@gmail.com" target="_blank"><i class="fa-solid fa-envelope"></i></a>
+                        <a href="https://leetcode.com/u/aarav7397/" target="_blank"><i class="fa-solid fa-code"></i></a>
                     </div>
                 </div>
 
@@ -69,8 +63,8 @@
                         in
                         automating devices,
                         Fast forward to today,<br> <br>I am an undergraduate student at <a href="https://ggu.ac.in/">
-                                Guru Ghasidas
-                                Vishwavidhalaya, India
+                            Guru Ghasidas
+                            Vishwavidhalaya, India
                         </a>, pursuing
                         B.Tech in Information Technology. And I've had completed Harvard University <a
                             href="https://cs50.harvard.edu/x/2023">CS50x (2023)</a> and <a
@@ -148,7 +142,7 @@
                                             Created Chrome extension as my final project.
                                             Build and develop Stock Web app using flask and Bootstrap. Created figlet
                                             like apps using Python and C by each. Learnt Python,
-                                            javascript,Scratch, 
+                                            javascript,Scratch,
                                             HTML &amp; CSS, Bootstrap.
                                         </p>
                                         <p class="card-text">
@@ -254,88 +248,88 @@
                         </div>
                     </a>
 
-                        <a href="https://github.com/darkice000/glance-chrome-extension/">
-                            <div class="card mb-3 " style="max-width: 800px;">
-                                <div class="row g-0">
-                                    <div class="col-md-4 align-items-center d-flex">
-                                        <img src="assests/images/glance.png" class="img-fluid rounded-start img-thumbnail"
-                                            alt="...">
-                                    </div>
-                                    <div class="col-md-8">
-                                        <div class="card-body">
-                                            <h5 class="card-title">Glance Chrome Extension<span
-                                                    class="arrow-sym">↗</span></h5>
-                                            <p class="card-text">
-                                                Developed a chrome extension that can show current weatther, To‑do
-                                                manager, a motivation quote, a greeting message for user. Created a
-                                                Setting page for the chrome extension in which user can his name and
-                                                Location of the weather data
-                                            </p>
-                                            <p class="card-text">
-                                                <span class="rounded-pill px-2 py-1 mx-1">HTML &amp; CSS</span>
-                                                <span class="rounded-pill px-2 py-1 mx-1">Javascript</span>
-                                                <span class="rounded-pill px-2 py-1 mx-1">JSON</span>
-                                                <span class="rounded-pill px-2 py-1 mx-1">chrome extension api</span>
-                                            </p>
-                                        </div>
+                    <a href="https://github.com/darkice000/glance-chrome-extension/">
+                        <div class="card mb-3 " style="max-width: 800px;">
+                            <div class="row g-0">
+                                <div class="col-md-4 align-items-center d-flex">
+                                    <img src="assests/images/glance.png" class="img-fluid rounded-start img-thumbnail"
+                                        alt="...">
+                                </div>
+                                <div class="col-md-8">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Glance Chrome Extension<span class="arrow-sym">↗</span>
+                                        </h5>
+                                        <p class="card-text">
+                                            Developed a chrome extension that can show current weatther, To‑do
+                                            manager, a motivation quote, a greeting message for user. Created a
+                                            Setting page for the chrome extension in which user can his name and
+                                            Location of the weather data
+                                        </p>
+                                        <p class="card-text">
+                                            <span class="rounded-pill px-2 py-1 mx-1">HTML &amp; CSS</span>
+                                            <span class="rounded-pill px-2 py-1 mx-1">Javascript</span>
+                                            <span class="rounded-pill px-2 py-1 mx-1">JSON</span>
+                                            <span class="rounded-pill px-2 py-1 mx-1">chrome extension api</span>
+                                        </p>
                                     </div>
                                 </div>
                             </div>
-                        </a>
+                        </div>
+                    </a>
 
-                        <a href="https://github.com/darkice000/automate_flow/">
-                            <div class="card mb-3 " style="max-width: 800px;">
-                                <div class="row g-0">
-                                    <div class="col-md-4 align-items-center d-flex">
-                                        <img src="assests/images/automate.png" class="img-fluid rounded-start img-thumbnail"
-                                            alt="...">
-                                    </div>
-                                    <div class="col-md-8">
-                                        <div class="card-body">
-                                            <h5 class="card-title">Automate Flow<span class="arrow-sym">↗</span></h5>
-                                            <p class="card-text">
-                                                Create a bunch of tasks automater scripts in Android "Automate" app that
-                                                can be used to perform various tasks like when your earphone get
-                                                connected to your phone, It will suggest you some apps that you may want
-                                                to use. Like YouTube, Music App etc.
-                                            </p>
-                                            <p class="card-text">
-                                                <span class="rounded-pill px-2 py-1 mx-1">Automate Script</span>
-                                            </p>
-                                        </div>
+                    <a href="https://github.com/darkice000/automate_flow/">
+                        <div class="card mb-3 " style="max-width: 800px;">
+                            <div class="row g-0">
+                                <div class="col-md-4 align-items-center d-flex">
+                                    <img src="assests/images/automate.png" class="img-fluid rounded-start img-thumbnail"
+                                        alt="...">
+                                </div>
+                                <div class="col-md-8">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Automate Flow<span class="arrow-sym">↗</span></h5>
+                                        <p class="card-text">
+                                            Create a bunch of tasks automater scripts in Android "Automate" app that
+                                            can be used to perform various tasks like when your earphone get
+                                            connected to your phone, It will suggest you some apps that you may want
+                                            to use. Like YouTube, Music App etc.
+                                        </p>
+                                        <p class="card-text">
+                                            <span class="rounded-pill px-2 py-1 mx-1">Automate Script</span>
+                                        </p>
                                     </div>
                                 </div>
                             </div>
-                        </a>
+                        </div>
+                    </a>
 
-                        <a href="https://github.com/darkice000/ebay-replica/">
-                            <div class="card mb-3 " style="max-width: 800px;">
-                                <div class="row g-0">
-                                    <div class="col-md-4 align-items-center d-flex">
-                                        <img src="assests/images/ebay.png" class="img-fluid rounded-start img-thumbnail"
-                                            alt="...">
-                                    </div>
-                                    <div class="col-md-8">
-                                        <div class="card-body">
-                                            <h5 class="card-title">Ebay Replica<span class="arrow-sym">↗</span></h5>
-                                            <p class="card-text">
-                                                Developed a django web app replicating the main features of ebay
-                                                commerce site for bidding and listing goods.
-                                                it can manage Users, create a listing if logged in, make bidding,
-                                                categories, watchlist and many more features.
-                                            </p>
-                                            <p class="card-text">
-                                                <span class="rounded-pill px-2 py-1 mx-1">Django</span>
-                                                <span class="rounded-pill px-2 py-1 mx-1">HTML &amp; CSS</span>
-                                                <span class="rounded-pill px-2 py-1 mx-1">Javascript</span>
-                                                <span class="rounded-pill px-2 py-1 mx-1">Bootstrap</span>
-                                            </p>
-                                        </div>
+                    <a href="https://github.com/darkice000/ebay-replica/">
+                        <div class="card mb-3 " style="max-width: 800px;">
+                            <div class="row g-0">
+                                <div class="col-md-4 align-items-center d-flex">
+                                    <img src="assests/images/ebay.png" class="img-fluid rounded-start img-thumbnail"
+                                        alt="...">
+                                </div>
+                                <div class="col-md-8">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Ebay Replica<span class="arrow-sym">↗</span></h5>
+                                        <p class="card-text">
+                                            Developed a django web app replicating the main features of ebay
+                                            commerce site for bidding and listing goods.
+                                            it can manage Users, create a listing if logged in, make bidding,
+                                            categories, watchlist and many more features.
+                                        </p>
+                                        <p class="card-text">
+                                            <span class="rounded-pill px-2 py-1 mx-1">Django</span>
+                                            <span class="rounded-pill px-2 py-1 mx-1">HTML &amp; CSS</span>
+                                            <span class="rounded-pill px-2 py-1 mx-1">Javascript</span>
+                                            <span class="rounded-pill px-2 py-1 mx-1">Bootstrap</span>
+                                        </p>
                                     </div>
                                 </div>
                             </div>
-                        </a>
-                        <a href="https://github.com/darkice000/">View All Projects <span class="arrow-sym">↗</span></a>
+                        </div>
+                    </a>
+                    <a href="https://github.com/darkice000/">View All Projects <span class="arrow-sym">↗</span></a>
                 </div>
 
                 <!------------------------------------------------------------------------------Footnote------------------------------------------------------------------------------------------------------------------------------- -->
