resume link update :

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <div class="container-xxl" style="width:95vw; height:90vh;">
 
-        <div class="row m-0 justify-content-center" id="main-row">
+        <div class="row m-0 p-0 justify-content-center" id="main-row">
 
             <div class="stars">
                 <div class="star"></div>
@@ -54,7 +54,7 @@
             </div>
 
             <!------------------------------------------------------------------------------CV------------------------------------------------------------------------------------------------------------------------------- -->
-            <div class="col-lg-6 col-sm-12 h-100 overflow-scroll scrollspy-example" data-bs-spy="scroll"
+            <div class="col-lg-6 col-sm-12 overflow-scroll scrollspy-example" data-bs-spy="scroll"
                 data-bs-target="#overview" data-bs-smooth-scroll="true" style="scrollbar-width: none;">
 
                 <div class="col-12 my-5 pt-4" id="About">
@@ -97,8 +97,8 @@
                     <!------------------------------------------------------------------------------Certifications------------------------------------------------------------------------------------------------------------------------------- -->
 
 
-                    <a href="https://drive.google.com/file/d/1xF_HwpVnoMMhBSrUWoAcXBbmv7M-Ln6R/view?usp=drive_link">
-                        <div class="card glassy my-4 rounded-3 py-4 px-4" style="max-width: 800px;">
+                        <div class="card glassy my-4 rounded-3 py-4 px-2" style="max-width: 800px;">
+                        <a href="https://drive.google.com/file/d/1xF_HwpVnoMMhBSrUWoAcXBbmv7M-Ln6R/view?usp=drive_link">
                             <div class="row">
                                 <div class="col-md-4 d-flex justify-content-start">
                                     <p class="timeline-date">SEP 2023 - CURRENT</p>
@@ -124,11 +124,11 @@
                                     </div>
                                 </div>
                             </div>
+                        </a>
                         </div>
-                    </a>
 
-                    <a href="https://certificates.cs50.io/ec42d5ee-aa1b-476e-9de0-60e71cd4b58b.pdf?size=letter">
-                        <div class="card glassy my-4 rounded-3 py-4 px-4" style="max-width: 800px;">
+                        <div class="card glassy my-4 rounded-3 py-4 px-2" style="max-width: 800px;">
+                        <a href="https://certificates.cs50.io/ec42d5ee-aa1b-476e-9de0-60e71cd4b58b.pdf?size=letter">
                             <div class="row">
                                 <div class="col-md-4 d-flex justify-content-start">
                                     <p class="timeline-date">MAY 2023 - NOV 2023</p>
@@ -155,11 +155,11 @@
                                     </div>
                                 </div>
                             </div>
+                        </a>
                         </div>
-                    </a>
 
-                    <a href="https://drive.google.com/file/d/1_KeNDUMHfMNcglZMj0p4rMA0p1SNS5YL/view?usp=drive_link">
-                        <div class="card glassy my-4 rounded-3 py-4 px-4" style="max-width: 800px;">
+                        <div class="card glassy my-4 rounded-3 py-4 px-2" style="max-width: 800px;">
+                        <a href="https://drive.google.com/file/d/1_KeNDUMHfMNcglZMj0p4rMA0p1SNS5YL/view?usp=drive_link">
                             <div class="row">
                                 <div class="col-md-4 d-flex justify-content-start">
                                     <p class="timeline-date">JUL 2024 - CURRENT</p>
@@ -184,11 +184,11 @@
                                     </div>
                                 </div>
                             </div>
+                        </a>
                         </div>
-                    </a>
 
-                    <a href="https://drive.google.com/file/d/1_KeNDUMHfMNcglZMj0p4rMA0p1SNS5YL/view?usp=drive_link">
-                        <div class="card glassy my-4 rounded-3 py-4 px-4" style="max-width: 800px;">
+                        <div class="card glassy my-4 rounded-3 py-4 px-2" style="max-width: 800px;">
+                        <a href="https://drive.google.com/file/d/1_KeNDUMHfMNcglZMj0p4rMA0p1SNS5YL/view?usp=drive_link">
                             <div class="row">
                                 <div class="col-md-4 d-flex justify-content-start">
                                     <p class="timeline-date">JAN 2024 - FEB 2024</p>
@@ -212,10 +212,10 @@
                                     </div>
                                 </div>
                             </div>
+                        </a>
                         </div>
-                    </a>
 
-                    <a href="https://">View Full Resume <span class="arrow-sym">↗</span></a>
+                    <a href="https://drive.google.com/file/d/1IMJTycNsisoJS8TKDGT5njCLGPO-fAcs/view">View Full Resume <span class="arrow-sym">↗</span></a>
                 </div>
 
                 <!------------------------------------------------------------------------------Projects------------------------------------------------------------------------------------------------------------------------------- -->
