--- a/index.html
+++ b/index.html
@@ -115,11 +115,11 @@
                                             with the Django, Javascript, Bootstrap to create a real world Web App.
                                         </p>
                                         <p class="card-text">
-                                            <span class="rounded-pill px-2 py-1 mx-1">Django</span>
-                                            <span class="rounded-pill px-2 py-1 mx-1">ReactJS</span>
-                                            <span class="rounded-pill px-2 py-1 mx-1">HTML &amp; CSS</span>
-                                            <span class="rounded-pill px-2 py-1 mx-1">Javascript</span>
-                                            <span class="rounded-pill px-2 py-1 mx-1">Bootstrap</span>
+                                            <span class="rounded-pill text-nowrap px-2 py-1 mx-1">Django</span>
+                                            <span class="rounded-pill text-nowrap px-2 py-1 mx-1">ReactJS</span>
+                                            <span class="rounded-pill text-nowrap px-2 py-1 mx-1">HTML &amp; CSS</span>
+                                            <span class="rounded-pill text-nowrap px-2 py-1 mx-1">Javascript</span>
+                                            <span class="rounded-pill text-nowrap px-2 py-1 mx-1">Bootstrap</span>
                                         </p>
                                     </div>
                                 </div>
@@ -146,11 +146,11 @@
                                             HTML &amp; CSS, Bootstrap.
                                         </p>
                                         <p class="card-text">
-                                            <span class="rounded-pill px-2 py-1 mx-1">Flask</span>
-                                            <span class="rounded-pill px-2 py-1 mx-1">C language</span>
-                                            <span class="rounded-pill px-2 py-1 mx-1">HTML &amp; CSS</span>
-                                            <span class="rounded-pill px-2 py-1 mx-1">Python</span>
-                                            <span class="rounded-pill px-2 py-1 mx-1">Javascript</span>
+                                            <span class="rounded-pill text-nowrap px-2 py-1 mx-1">Flask</span>
+                                            <span class="rounded-pill text-nowrap px-2 py-1 mx-1">C language</span>
+                                            <span class="rounded-pill text-nowrap px-2 py-1 mx-1">HTML &amp; CSS</span>
+                                            <span class="rounded-pill text-nowrap px-2 py-1 mx-1">Python</span>
+                                            <span class="rounded-pill text-nowrap px-2 py-1 mx-1">Javascript</span>
                                         </p>
                                     </div>
                                 </div>
@@ -176,10 +176,10 @@
                                             progress.
                                         </p>
                                         <p class="card-text">
-                                            <span class="rounded-pill px-2 py-1 mx-1">Django</span>
-                                            <span class="rounded-pill px-2 py-1 mx-1">HTML &amp; CSS</span>
-                                            <span class="rounded-pill px-2 py-1 mx-1">Javascript</span>
-                                            <span class="rounded-pill px-2 py-1 mx-1">Bootstrap</span>
+                                            <span class="rounded-pill text-nowrap px-2 py-1 mx-1">Django</span>
+                                            <span class="rounded-pill text-nowrap px-2 py-1 mx-1">HTML &amp; CSS</span>
+                                            <span class="rounded-pill text-nowrap px-2 py-1 mx-1">Javascript</span>
+                                            <span class="rounded-pill text-nowrap px-2 py-1 mx-1">Bootstrap</span>
                                         </p>
                                     </div>
                                 </div>
@@ -204,10 +204,10 @@
 
                                         </p>
                                         <p class="card-text">
-                                            <span class="rounded-pill px-2 py-1 mx-1">TCP/IP</span>
-                                            <span class="rounded-pill px-2 py-1 mx-1">Cloud Networks</span>
-                                            <span class="rounded-pill px-2 py-1 mx-1">Security Hardening</span>
-                                            <span class="rounded-pill px-2 py-1 mx-1">Network Architecture</span>
+                                            <span class="rounded-pill text-nowrap px-2 py-1 mx-1">TCP/IP</span>
+                                            <span class="rounded-pill text-nowrap px-2 py-1 mx-1">Cloud Networks</span>
+                                            <span class="rounded-pill text-nowrap px-2 py-1 mx-1">Security Hardening</span>
+                                            <span class="rounded-pill text-nowrap px-2 py-1 mx-1">Network Architecture</span>
                                         </p>
                                     </div>
                                 </div>
@@ -237,10 +237,10 @@
                                             your place in the time of Emergency cases.
                                         </p>
                                         <p class="card-text">
-                                            <span class="rounded-pill px-2 py-1 mx-1">Django</span>
-                                            <span class="rounded-pill px-2 py-1 mx-1">HTML &amp; CSS</span>
-                                            <span class="rounded-pill px-2 py-1 mx-1">Javascript</span>
-                                            <span class="rounded-pill px-2 py-1 mx-1">Bootstrap</span>
+                                            <span class="rounded-pill text-nowrap px-2 py-1 mx-1">Django</span>
+                                            <span class="rounded-pill text-nowrap px-2 py-1 mx-1">HTML &amp; CSS</span>
+                                            <span class="rounded-pill text-nowrap px-2 py-1 mx-1">Javascript</span>
+                                            <span class="rounded-pill text-nowrap px-2 py-1 mx-1">Bootstrap</span>
                                         </p>
                                     </div>
                                 </div>
@@ -266,10 +266,10 @@
                                             Location of the weather data
                                         </p>
                                         <p class="card-text">
-                                            <span class="rounded-pill px-2 py-1 mx-1">HTML &amp; CSS</span>
-                                            <span class="rounded-pill px-2 py-1 mx-1">Javascript</span>
-                                            <span class="rounded-pill px-2 py-1 mx-1">JSON</span>
-                                            <span class="rounded-pill px-2 py-1 mx-1">chrome extension api</span>
+                                            <span class="rounded-pill text-nowrap px-2 py-1 mx-1">HTML &amp; CSS</span>
+                                            <span class="rounded-pill text-nowrap px-2 py-1 mx-1">Javascript</span>
+                                            <span class="rounded-pill text-nowrap px-2 py-1 mx-1">JSON</span>
+                                            <span class="rounded-pill text-nowrap px-2 py-1 mx-1">chrome extension api</span>
                                         </p>
                                     </div>
                                 </div>
@@ -294,7 +294,7 @@
                                             to use. Like YouTube, Music App etc.
                                         </p>
                                         <p class="card-text">
-                                            <span class="rounded-pill px-2 py-1 mx-1">Automate Script</span>
+                                            <span class="rounded-pill text-nowrap px-2 py-1 mx-1">Automate Script</span>
                                         </p>
                                     </div>
                                 </div>
@@ -319,10 +319,10 @@
                                             categories, watchlist and many more features.
                                         </p>
                                         <p class="card-text">
-                                            <span class="rounded-pill px-2 py-1 mx-1">Django</span>
-                                            <span class="rounded-pill px-2 py-1 mx-1">HTML &amp; CSS</span>
-                                            <span class="rounded-pill px-2 py-1 mx-1">Javascript</span>
-                                            <span class="rounded-pill px-2 py-1 mx-1">Bootstrap</span>
+                                            <span class="rounded-pill text-nowrap px-2 py-1 mx-1">Django</span>
+                                            <span class="rounded-pill text-nowrap px-2 py-1 mx-1">HTML &amp; CSS</span>
+                                            <span class="rounded-pill text-nowrap px-2 py-1 mx-1">Javascript</span>
+                                            <span class="rounded-pill text-nowrap px-2 py-1 mx-1">Bootstrap</span>
                                         </p>
                                     </div>
                                 </div>
