fixed h-100 removed readded

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             </div>
 
             <!------------------------------------------------------------------------------CV------------------------------------------------------------------------------------------------------------------------------- -->
-            <div class="col-lg-6 col-sm-12 overflow-scroll scrollspy-example" data-bs-spy="scroll"
+            <div class="col-lg-6 col-sm-12 h-100 overflow-scroll scrollspy-example" data-bs-spy="scroll"
                 data-bs-target="#overview" data-bs-smooth-scroll="true" style="scrollbar-width: none;">
 
                 <div class="col-12 my-5 pt-4" id="About">
