--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1 viewport=cover">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Aarav Kumar</title>
     <link rel="stylesheet" href="assests/bootstrap/bootstrap.css">
     <link rel="stylesheet" href="assests/homepage.css">
