somechanges in footer

--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
                 <div class="col-12 my-5" id="Footnote">
                     <p> This portfolio is closely inspired by <a href="https://brittanychiang.com/">Brittany
                             Chiang</a>'s
-                        Portfolio. I built using Bootstrap and Django. Thank you, visiting.</p>
+                        Portfolio. Recreated in Bootstrap, HTML and CSS, by yours truly. Thank you so much for visiting.</p>
                 </div>
             </div>
 
